# ds-project-A4

./: README.md
property_finder/: CMakeLists.txt  MAPBOX_SETUP.md  build.bat  build.sh  research_paper.txt  setup.bat  setup.sh  test_dependencies.py
property_finder/data/: sample_properties.csv  sample_properties_backup.csv
property_finder/docs/: development_guide.md
property_finder/frontend/: app.js  charts.js  config.js  index.html  launch.html  mapbox_test.html  styles.css
property_finder/python/: data_cleaner.py  ml_analyzer.py  requirements.txt
property_finder/src/: api_server.cpp  api_server.h  csv_parser.cpp  csv_parser.h  main.cpp  ml_predictor.cpp  ml_predictor.h  property.cpp  property.h  property_manager.cpp  property_manager.h  search_engine.cpp  search_engine.h  utils.cpp  utils.h
